test/sema/pointer-comparison-custom-func.delta
// RUN: %check_errors %not %delta -typecheck %s

struct X {}

void fx(X* a, X* b) {
    // CHECK: [[@LINE+1]]:11: error: type 'X' doesn't implement interface 'Comparable'
    _ = a < b;
}
